# bq25792-utils

./: CMakeLists.txt  README.md  bq25792.c  install.sh
include/: bq25792.h
src/: README.md  bq25792.c  bq25792d.c  bqctl.c
systemd/: bq25792d.service
